Fix Mailchimp button alignment issue

--- a/src/style/landing.scss
+++ b/src/style/landing.scss
@@ -2,7 +2,7 @@ $landing-color-primary: $color-hack-red;
 $landing-color-border: $color-hack-black-5;
 $landing-color-dark-bg: $color-hack-black-5;
 
-body {
+html, body {
   overflow-x: hidden;
 }
 
